[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-steward"
version = "0.1.0"
description = "Local-first, read-only repository stewardship reports for GitHub accounts and organizations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
github-steward = "github_steward.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
